# stm32f769

./: .gitignore  Config.in  Makefile  README.md  external.desc  external.mk  post-image.sh
configs/: buildroot  busybox  custom_stm32f769_defconfig  kernel  uboot
package/fbmark/: Config.in  fbmark.hash  fbmark.mk
package/hello/: Config.in  hello.mk
package/hello/src/: CMakeLists.txt  Makefile  bmp_drawable.c  bmp_drawable.h  capp.cpp  capp.hpp  drawable.c  drawable.h  hello.c  main.c  main.cpp  message.pb.c  message.pb.h  message.proto  rtc.c  rtc.h  sock.c  sock.h  text_drawable.c  text_drawable.h  window_drawable.c  window_drawable.h
patches/: buildroot.revert_remove_binutils_2.28.patch  linux.001_ethernet.patch  linux.003_video_framebuffer.patch  u-boot.001_environment.patch
stm32f769i-disco/: busybox.config  kernel.config  uboot.config
stm32f769i-disco/overlay/etc/init.d/: S40network
stm32f769i-disco/overlay/root/: enable_drm_debug.sh  mount_debugfs.sh  pan_fb.sh  reboot.sh
stm32f769i-disco/patches/linux/5.4.10/: linux-002-dfsdm_adc.patch  linux-003-video_framebuffer.patch
stm32f769i-disco/patches/linux/5.6.15/: 0001-ethernet-fixes.patch  0002-enable-video-driver-now-dev-fb0-is-available.patch  0003-enable-dfsdm-adc.patch  0004-shared-dma-resizing.patch  0005-Touch-input-config.patch  0006-Add-qspi-flash-TODO.patch
stm32f769i-disco/patches/uboot/: 0001-Fixed-STM32F769-boot-commands.patch  uboot-001-environment.patch
